--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Snake Game</title>
     <script src="../processingJS/processing.js"></script>
     <script src="../processingJS/processing.min.js"></script>
+    <script src="../main/constants.js"></script>
 </head>
 <body>
     <canvas id="canvas" data-processing-sources="../src/main.pde"></canvas>
