Add Food object
 *Improved the functionality of Food constructor, so
   it randomly generates the position of food
 *Added disappear() method for Food
 *Added [helperFunctions.js] under [main] directory
   to store core helper functions that are not methods
   of Snake, Barrier, Food, etc. objects and do not use
   any of their instances

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="../processingJS/processing.js"></script>
     <script src="../processingJS/processing.min.js"></script>
     <script src="../main/constants.js"></script>
+    <script src="../main/helperFunctions.js"></script>
 </head>
 <body>
     <canvas id="canvas" data-processing-sources="../src/main.pde"></canvas>
