Organize code into different directories and files
 *Created separate [.pde] files for Barrier, Food,
 and Snake objects, so that their properties and
 methods are encapsulated in separate files. So,
 [main.pde] only sets up the game.
 *Added new [.pde] files to data-processing-sources
 of canvas to allow the functionality of the program

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <script src="../main/helperFunctions.js"></script>
 </head>
 <body>
-    <canvas id="canvas" data-processing-sources="../src/main.pde"></canvas>
+    <canvas id="canvas" data-processing-sources="../src/barrier.pde ../src/food.pde ../src/snake.pde ../src/main.pde"></canvas>
 </body>
 </html>
