Refine Snake Object
  *Enabled the player to play using W, A, S, D keys
  *Added [checkForFoodEat()] method to check if
  the snake eats the food. The game is continued
  with new food being randomly generated on the
  canvas. Game is over when the snake hits barrier.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="../main/helperFunctions.js"></script>
 </head>
 <body>
-    <canvas id="canvas" data-processing-sources="../src/main.pde"></canvas>
+    <canvas data-processing-sources="../src/barrier.pde ../src/food.pde ../src/snake.pde ../main/barrierHelperFunctions.pde ../src/main.pde">
+    </canvas>
 </body>
 </html>
